objects/Ext_Data__x.object
<CustomObject>
    <description>Ext Data</description>
    <externalDataSource>ExtData</externalDataSource>
    <externalName>Ext Data</externalName>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <label>Ext Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Id</columns>
        <columns>DisplayUrl</columns>
        <columns>ExternalId</columns>
        <columns>Description__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Ext Data</pluralLabel>
</CustomObject>